# mini-prompt

./: Cargo.toml  README.md  shell.nix
crates/gibbs-core/: Cargo.toml
crates/gibbs-core/examples/: function_call.rs  model_call.rs  tool_call.rs
crates/gibbs-core/src/: backends.rs  callers.rs  data_model.rs  lib.rs  models.rs  parse.rs  tools.rs
crates/gibbs-core/tests/: memory_ex.rs
crates/mini-prompt/: Cargo.toml  README.md
crates/mini-prompt/examples/: model_call.rs  tool_call.rs
crates/mini-prompt/src/: callers.rs  data_model.rs  lib.rs  models.rs  parse.rs  tools.rs
crates/mini-prompt/tests/: memory_ex.rs
