[workspace]
members = ["crates/gibbs-core"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }


# our crates
gibbs-core = { version = "0.0.1", path = "crates/gibbs-core" }
