[workspace]
members = ["crates/gibbs-core"]
resolver = "2"

[workspace.dependencies]
markdown = { version = "^1.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_lenient = { version = "^0.2" }


# our crates
gibbs-core = { version = "0.0.1", path = "crates/gibbs-core" }
