[workspace]
members = ["crates/mini-prompt"]
resolver = "2"

[workspace.dependencies]
markdown = { version = "^1.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_lenient = { version = "^0.2" }

indoc = "^2.0"

itertools = "0.14"

# our crates
mini-prompt = { version = "0.0.1", path = "crates/mini-prompt" }
