[package]
edition = "2021"
name = "gibbs-core"
version = "0.0.1"
license = "MIT OR Apache-2.0"

rust-version = "1.78"

[[example]]
name = "model_call"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
reqwest.workspace = true

markdown.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
serde.workspace = true