[package]
edition = "2021"
name = "mini-prompt"
version = "0.0.1"
license = "MIT OR Apache-2.0"

rust-version = "1.78"

description = "Lightweight abstractions for using LLMs via a providers API."
homepage = "https://github.com/twitchyliquid64/mini-prompt"
documentation = "https://docs.rs/mini_prompt"
repository = "https://github.com/twitchyliquid64/mini-prompt"
readme = "README.md"

keywords = [
    "llm",
    "ai",
]

[[example]]
name = "model_call"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
reqwest.workspace = true
itertools.workspace = true

markdown.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
serde.workspace = true

indoc.workspace = true
